--- a/tesi.tex
+++ b/tesi.tex
@@ -25,7 +25,9 @@
 %**************************************************************
 
 %\usepackage{amsmath,amssymb,amsthm}    % matematica
-
+\setcounter{topnumber}{11}
+\setcounter{bottomnumber}{11}
+\setcounter{totalnumber}{11}
 \usepackage[english, italian]{babel}    % per scrivere in italiano e in inglese;
                                         % l'ultima lingua (l'italiano) risulta predefinita
 
